--- a/VotePlatform/Views/Shared/_Layout.cshtml
+++ b/VotePlatform/Views/Shared/_Layout.cshtml
@@ -50,6 +50,13 @@
             padding: 0.5em;
         }
 
+        .card-hz2 {
+            border-radius: 1em;
+            text-align: left;
+            background-color: rgb(230, 230, 255);
+            padding: 0.5em;
+        }
+
         .card-voice {
             border-radius: 1em;
             text-align: center;
@@ -60,6 +67,13 @@
         .card-obsh {
             border-radius: 1em;
             text-align: center;
+            background-color: rgb(225, 225, 255);
+            padding: 0.5em;
+        }
+
+        .card-hz {
+            border-radius: 1em;
+            text-align: left;
             background-color: rgb(225, 225, 255);
             padding: 0.5em;
         }
