--- a/VotePlatform/Views/_ViewImports.cshtml
+++ b/VotePlatform/Views/_ViewImports.cshtml
@@ -2,7 +2,7 @@
 @using VotePlatform.ViewModels.Organizations;
 @using VotePlatform.ViewModels.Users;
 @using VotePlatform.ViewModels;
-
+@using VotePlatform.Models.SystemServices;
 @using VotePlatform.Models.Votes;
 
 @using System;
@@ -11,3 +11,6 @@
 @using VotePlatform.Views.Votes;
 
 @using VotePlatform;
+@using VotePlatform.Models;
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
