--- a/VotePlatform/Views/Users/Main.cshtml
+++ b/VotePlatform/Views/Users/Main.cshtml
@@ -1,5 +1,6 @@
 ﻿@model MainUser
-
+<center>
+    <div class="card-obsh my-5" style="width:30%">
 <h3>@Model.role</h3>
 <h3>@Model.nickname</h3>
 @{
@@ -14,7 +15,7 @@
 @{
     if (Model.isMe)
     {
-        <a href=@($"{ORoutes.Controller}{ORoutes.ACreate}")>Новая организация</a>
+                <a class="btn btn-primary my-2" href=@($"{ORoutes.Controller}{ORoutes.ACreate}")>Новая организация</a>
     }
 }
 
@@ -22,14 +23,16 @@
     <h3>Владеет:</h3>
     foreach(var org in Model.ownedOrg)
     {
-        <a href=@org.url>@($"{org.name}  {org.nick}")</a>
+        <div class="card-obsh">
+                <a class="btn btn-primary my-2" href=@org.url>@($"{org.name}  {org.nick}")</a>
+        </div>
     }
     if (Model.isMe)
     {
         <h3>Руководит:</h3>
         foreach (var org in Model.adminedOrg)
         {
-            <a href=@org.url>@(
+            <a class="btn btn-primary my-2" href=@org.url>@(
            $"{org.name}  {org.nick}"
            )</a>
         }
@@ -39,6 +42,8 @@
 
     foreach (var org in Model.audiencedOrg)
     {
-        <a href=@org.url>@($"{org.name}  {org.nick}")</a>
+                <a class="btn btn-primary my-2" href=@org.url>@($"{org.name}  {org.nick}")</a>
     }
-}
+        }
+    </div>
+</center>
