--- a/VotePlatform/Views/Shared/_Layout.cshtml
+++ b/VotePlatform/Views/Shared/_Layout.cshtml
@@ -13,10 +13,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="~/img/gg.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="~/img/gg.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="~/img/gg.png" />
+    <link rel="manifest" href="~/img/gg.png" />
     <style>
         .fon {
             background-color: rgb(230, 230, 255);
@@ -90,7 +90,7 @@
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand p-0" href="/">
-                <img src="..." alt="Фотку крутую поставить" width="120" />
+                <img src="~/img/EverVote.png" alt="Фотку крутую поставить" width="120" />
             </a>
             <button class="navbar-toggler"
                     type="button"
